test/Fail/Issue5238.err
Issue5238.agda:15.15-18: warning: -W[no]RewriteVariablesNotBoundByLHS
foo  is not a legal rewrite rule, since the following variable is
not bound by the left hand side:
  x
when checking the pragma REWRITE foo

Issue5238.agda:18.8-12: error: [UnequalTerms]
The terms
  t0
and
  t1
are not equal at type T
when checking that the expression refl has type t0 ≡ t1
